--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,12 @@
 body {
     background-color: #EEEEEE;
     color: #393E46;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
+    font-family: 'Archivo', sans-serif;
     line-height: 1.5;
     margin-bottom: 20px;
 }
@@ -188,9 +189,7 @@ a:hover {
 
 /* Contact section */
 
-#contact {
 
-}
 
 #btn-contact {
     margin: 2% 0%;
